# markforge

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: CLAUDE.md  settings.json
.github/workflows/: ci.yml  release.yml
docs/: index.html
scripts/: generate_icon.py  generate_reference_docx.py  smoke-test-export.sh  smoke-test-fixture.md
scripts/ci/: fetch-sidecars-linux.sh  fetch-sidecars-windows.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: deps.rs  export.rs  fs_commands.rs  mod.rs  startup.rs  templates.rs  win_assoc.rs
src/components/: Editor.tsx  ExportDialog.tsx  FileTree.tsx  MetadataPanel.tsx  SettingsDialog.tsx  TemplateManager.tsx  TopBar.tsx  WelcomeScreen.tsx
src/lib/: frontmatter.test.ts  frontmatter.ts  paths.test.ts  paths.ts  tauri.ts
src/store/: projectStore.ts
src/styles/: app.css  base.css  editor-overrides.css
templates/default/: pdf-template.typ  reference.docx
